<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Budget Envelopes</string>
    <string name="action_settings">Settings</string>
    <string name="action_manage_envelopes">Edit Envelopes</string>
    <string name="action_more_options">more options</string>
    <string name="action_backup_sync">Synchronize/Backup</string>
    <string name="action_empty_envelopes">Empty envelopes</string>
    <string name="dummy">dummy</string>
    <string name="setup_envelope">Setup Envelope</string>
    <string name="delete_envelope">Delete Envelope</string>
    <string name="delete_envelope_question">Do you really want to delete this envelope?</string>
    <string name="empty_envelopes">Empty envelopes</string>
    <string name="empty_envelopes_question">Do you really want to empty all envelopes?</string>
    <string name="envelopelabel">Envelope Label</string>
    <string name="chooseColor">Choose color and stamp</string>
    <string name="keep_budget_on_empty">Ignore when emptying envelopes</string>
    <string name="done">Done</string>    
    <string name="execute">Execute</string>
    <string name="cancel">Cancel</string>
    <string name="add_envelope">Add envelope</string>
    <string name="add_space">Add space</string>
    <string name="new_envelope_title">new budget envelope</string>
    <string name="pick_a_color">Pick a Color!</string>
    <string name="deposit_to">Deposit to</string>
    <string name="withdraw_from">Withdraw from</string>
    <string name="transfer_from">Transfer from</string>
    <string name="expense_label">Expense</string>
    <string name="expense_amount">Amount</string>
    <string name="expense_frequency">Frequency (months)</string>
    <string name="desc_expense_frequency">Expense interval in months </string>
    <string name="desc_expense_amount">How much is to be paid?</string>
    <string name="desc_expense_name">What is the expense for?</string>
    <string name="desc_expense_delete">Delete this expense</string>
    <string name="desc_expense_add">Add new expense</string>
    <string name="desc_envelope_color">What color is that envelope?</string>
    <string name="desc_envelope_name">Give that envelope a nice name</string>
    <string name="desc_envelope_delete">Delete this envelope</string>
    <string name="desc_envelope_stamp">Stamp to decorate this envelope</string>
    <string name="desc_envelope_edit">Edit this envelope</string>
    <string name="desc_keep_budget_on_empty">When you empty all envelopes this envelope will be spared</string>
    <string name="desc_cancel">Cancel changes</string>
    <string name="desc_done">Save changes</string>
    <string name="desc_envelope_add_space">Add Space between envelopes</string>
    <string name="desc_envelope_add">Add new envelope to list</string>
    <string name="desc_deposit">Deposit in envelope</string>
    <string name="desc_withdraw">Withdraw from envelope</string>
    <string name="desc_transfer">Transfer from envelope to another</string>
    <string name="desc_distribute">Distribute into envelopes</string>
    <string name="edit_transaction">edit transaction</string>
    <string name="cancel_transaction">cancel transaction</string>
    <string name="cancel_transaction_question">Do your really want to cancel this transaction?</string>
    <string name="desc_transaction_date">date of transaction</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="pending">Pending</string>
    <string name="title_activity_sync">Synchronize and Backup Data</string>
    <string name="title_pending">Pending transactions</string>
    <string name="title_log">Log messages</string>
    <string name="error_title">Error</string>
    <string name="error_invalid_amount">Invalid transaction amount\nEnter a number larger than 0!</string>
    <string name="error_invalid_target_envelope">Invalid target envelope\nChoose another envelope as target for this transaction.</string>
    <string name="desc_envelope_move">touch to move the envelope up and down</string>
    <string name="targetEnvelope">Transfer to</string>
    <string name="undistributed">&lt;Undistributed&gt;</string>
    <string name="msg_error_contents_handling">Could not handle file contents</string>
    <string name="msg_error_copy_file">Error during file copy</string>
    <string name="msg_error_create_remote_file">Remote file could not be created</string>
    <string name="msg_error_general">An error occurred - see log</string>
    <string name="msg_error_no_create_remote_folder">Could not create folder in Google Drive</string>
    <string name="msg_error_request_sync_gdrive">Could not synchronize your Google Drive</string>
    <string name="msg_error_upload_file">Error during file upload</string>
    <string name="msg_error_db_broken">Database file is corrupted</string>
    <string name="msg_copied_file">File copied successfully</string>
    <string name="msg_downloaded_file">File downloaded successfully</string>
    <string name="msg_no_local_sync_data">No local sync data</string>
    <string name="msg_no_file_download">No file to download</string>
    <string name="msg_uploaded_file">File uploaded successfully</string>
    <string name="msg_using_account">using account</string>
    <string name="msg_local_data_update_count">number of updated datasets</string>
    <string name="msg_sync_success">Database sync successful</string>    
    <string name="msg_restore_success">Database restore successful</string>
    <string name="msg_ready_go_back">Everything done - you may go back now.</string>
    <string name="msg_attempt_file_download">trying to download file</string>
    <string name="msg_attempt_file_upload">trying to upload file</string>
    <string name="msg_attempt_db_cleanup">cleaning up database</string>
    <string name="msg_attempt_file_cleanup">cleaning up file system</string>
    <string name="msg_attempt_apply_local_data">applying local changes</string>
    <string name="msg_attempt_deleting_outdated_backups">deleting outdated backup files, leaving %d files.</string>
    <string name="msg_file_delete_success">%s deleted</string>
    <string name="msg_file_delete_fail">deleting %s FAILED!</string>
    
    <string name="title_activity_settings">Settings</string>

    <string name="pref_category_general">General</string>
    <string name="pref_title_currency">Currency symbol to use</string>    
    <string name="pref_summ_currency">current currency symbol: </string>
    
    <string name="pref_category_sync">Synchronization &amp; Backup</string>
    <string name="pref_title_google_account">Google account</string>    
    <string name="pref_summ_google_account">select which Google Drive to use for synchronization and backup</string>
    <string name="pref_title_backup_count">Number of backup files</string>    
    <string name="pref_summ_backup_count">How many backup files shall be kept on Google Drive?</string>    
    
    <string name="pref_category_help">Budget Envelopes Help</string>
    <string name="pref_title_manual">Manual</string>
    <string name="pref_summ_manual">A quick reference guide.</string>
    <string name="pref_link_manual">https://sites.google.com/site/budgetenvelopesapp/home/manual</string>
    <string name="pref_title_privacy">Privacy Statement</string>
    <string name="pref_summ_privacy">What does the App do with my data?</string>
    <string name="pref_link_privacy">https://sites.google.com/site/budgetenvelopesapp/home/manual/privacy-policy</string>
    <string name="pref_summ_translate">translate this app using transcommu</string>
    <string name="pref_title_translate">Help translate this app</string>
    <string name="pref_title_sync_on_start">Sync on start</string>
    <string name="pref_summ_sync_on_start">Start synchronization whenever the app starts</string>


    <string name="desc_transaction_to_folder">into which folder shall the money be transferred</string>    
    <string name="desc_transaction_pending">set to true if you paid for something but your account has not yet been debited</string>    
    <string name="overdrawn">over drawn</string>    
    <string name="app_title">My Budget Envelopes</string>    
    <string name="total_credit">Total Credit</string>    
    <string name="planned_exp">planned exp / month</string>    
    <string name="exp_month">Expenses</string>    
    <string name="income_month">Income</string>      

    <string name="cancel_operation">Cancel operation</string>
    <string name="cancel_operation_question">Do you really want to cancel the running operation?</string>
    <string name="operation_cancelled">Operation cancelled</string>
    
    <string name="desc_no_backups">There are no backups in your Google Drive</string>
    <string name="title_restore">Restore from Backup file</string>
    <string name="desc_restore">Please choose a backup file from which you want to restore your data.\nWARNING: all data entered since that backup is lost!\nAs a safety precaution run the restore process on all synchronized devices or reset their APP Data and resync.</string>
    <string name="msg_error_no_selection">You did not select anything.</string>
    <string name="sync_backup">Synchronize &amp; Backup</string>
    <string name="restore">Restore</string>
    <string name="desc_sync_backup">Synchronize local data with data on Google Drive and put a backup there</string>
    <string name="desc_restorebtn">Restore data from Backups stored on Google Drive</string>
    <string name="msg_network_lost">Network connection was lost - Google API disconnected</string>
    <string name="msg_service_disconnected">Google API disconnected</string>
    
    <string name="distribute">Distribute</string>    
    <string name="desc_dlg_distribute">Choose how you want to distribute the available money into the envelopes.\n\nProportionally: The money is divided into the envelopes according to their share of the total budget.\n\nExact Amount: Only so much money goes into the envelopes as the expenses amount. WARNING: Might not fill all envelopes if your budget is low!</string>
    <string name="option_pro_rata">Proportionally</string>
    <string name="option_exact_amount">Exact amount</string>
    <string name="transaction_text_budget">Budget</string>

    <string name="view_attachment">show image</string>
    <string name="delete_attachment">delete image</string>
    <string name="update_attachment">new image</string>
    <string name="manage_attachment">manage transaction image attachment</string>
  
</resources>
