<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_box">

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_leather"
        android:paddingBottom="4dp" >

        <RelativeLayout
            android:id="@+id/innerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp" >

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_toLeftOf="@+id/buttonCancel"
                android:gravity="center_vertical"
                android:paddingBottom="2dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp"
                android:shadowColor="#FA000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/distribute"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textColorLink="?android:attr/colorForeground"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/buttonCancel"
                style="@android:style/Widget.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/buttonDone"
                android:contentDescription="@string/desc_cancel"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/buttonDone"
                style="@android:style/Widget.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/desc_done"
                android:text="@string/execute" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_below="@id/innerTitle"
            android:background="@drawable/leather_stiches_repeat"
            android:contentDescription="@null" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/titleBar"
        android:contentDescription="@null"
        android:src="@drawable/shadow_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/desc_dlg_distribute" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioProRata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/option_pro_rata" />

            <RadioButton
                android:id="@+id/radioExact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_exact_amount" />
        </RadioGroup>

    </LinearLayout>

</RelativeLayout>