<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_box" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_box" >

        <RelativeLayout
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/toolbar_leather"
            android:paddingBottom="4dp" >

            <RelativeLayout
                android:id="@id/innerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingRight="10dp"
                android:paddingTop="2dp" >

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@id/buttonCancel"
                    android:gravity="center_vertical"
                    android:shadowColor="#FA000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/setup_envelope"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:textColorLink="?android:attr/colorForeground"
                    android:textStyle="bold|italic" />

                <Button
                    android:id="@+id/buttonCancel"
                    style="@android:style/Widget.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_toLeftOf="@id/buttonDone"
                    android:contentDescription="@string/desc_cancel"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/buttonDone"
                    style="@android:style/Widget.Button.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/desc_done"
                    android:text="@string/done" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_below="@id/innerTitle"
                android:background="@drawable/leather_stiches_repeat"
                android:contentDescription="@null" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleBar"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subTitle"
            android:layout_marginTop="5dp"
            android:measureWithLargestChild="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:stretchColumns="2" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="end" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/envelopelabel"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/editEnvelopeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:contentDescription="@string/desc_envelope_name"
                    android:ems="10"
                    android:hint="@string/envelopelabel"
                    tools:ignore="ContentDescription" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/horizontal_divider" >
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/chooseColor"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <afzkl.development.colorpickerview.view.ColorPanelView
                    android:id="@+id/colorPanelView1"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:contentDescription="@string/desc_envelope_color" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2" >
                
	                <Spinner
	                    android:id="@+id/spinnerStamp"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:adjustViewBounds="true"
	                    android:contentDescription="@string/desc_envelope_stamp"
	                    android:maxHeight="64dp"
	                    android:scaleType="fitCenter"
	                    android:src="@drawable/stamp"
	                    tools:listitem="@layout/list_item_stamp" />

				</RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/horizontal_divider" >
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:showDividers="end" >

                <CheckBox
                    android:id="@+id/checkBoxKeepOnEmpty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:contentDescription="@string/desc_keep_budget_on_empty"
                    android:ems="10"
                    android:hint="@string/keep_budget_on_empty" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/horizontal_divider" >
            </TableRow>



            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btnPaymentAdd"
                        style="@android:style/Widget.Button.Small"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/desc_expense_add"
                        android:src="@drawable/payment_add" />
                </RelativeLayout>
     

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ListView
                    android:id="@+id/listViewExpenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:orientation="vertical"
                    tools:listitem="@layout/list_item_expenses" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignTop="@+id/subTitle"
            android:contentDescription="@null"
            android:src="@drawable/shadow_horizontal" />

    </RelativeLayout>

</RelativeLayout>